# moot

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  SPEC.md
.github/workflows/: release.yml
.legacy-reference/meeting/: artifacts.rs  buffer.rs  claude.rs  clean.rs  config.rs  export.rs  mod.rs  models.rs  publisher.rs  recall.rs  run.rs  session.rs
.legacy-reference/meeting/prompts/: action_items.md.tera  adr.md.tera  journey_map.md.tera  notes.md.tera  spec.md.tera
prompts/: notes.md.tera
src/: error.rs  lib.rs  logging.rs  main.rs
src/bundle/: mod.rs
src/cli/: clean.rs  export.rs  fetch.rs  import.rs  list.rs  mod.rs  notes.rs  render.rs  run.rs  search.rs  secret.rs  show.rs
src/notes/: mod.rs
src/paths/: mod.rs
src/recall/: mod.rs
src/search/: mod.rs
src/secrets/: mod.rs
src/session/: mod.rs
src/store/: migrations.rs  mod.rs  model.rs  queries.rs
src/transcript/: mod.rs
src/util/: mod.rs  platform.rs  slug.rs  time.rs
tests/: import_export_roundtrip.rs  migrations.rs  recall_integration.rs  search.rs
