[package]
name = "moot"
version = "0.1.0"
edition = "2024"
description = "Send a Recall.ai bot to a meeting, capture the transcript, generate notes"
license = "MIT"
repository = "https://github.com/Battle-Creek-LLC/moot"
homepage = "https://github.com/Battle-Creek-LLC/moot"
readme = "README.md"
keywords = ["meeting", "transcript", "recall", "cli"]
categories = ["command-line-utilities"]
authors = ["Jonathan Stockdill"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "fs", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "linux-native", "sync-secret-service"] }
directories = "5"
ulid = "1"
slug = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4"
tera = "1"
humantime = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
